--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
                     <hr>
                 </div>
                 <div class="col-md-6">
-                    <img class="img-responsive img-border-left" src="img/slide-2.jpg" alt="">
+                    <img class="img-responsive img-border-left" src="http://scottosristorante.com/photos/menu_Img/slicePizza.jpg" alt="">
                 </div>
                 <div class="col-md-6">
                     <p>Pizza, one of the most popular prepared foods, can be tailored to fit numerous tastes and has become a staple product of thousands of take-out and delivery pizza businesses.</p>
