--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Blog - Business Casual - Start Bootstrap Theme</title>
+    <title>Pizza Break</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -32,8 +32,8 @@
 
 <body>
 
-    <div class="brand">Business Casual</div>
-    <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+    <div class="brand">Pizza Break</div>
+    <div class="address-bar">Caucalan, Taloy sur | Tuba Benguet 09266293141</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -47,7 +47,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Business Casual</a>
+                <a class="navbar-brand" href="index.html">Pizza Break</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -83,32 +83,49 @@
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="img/slide-1.jpg" alt="">
-                    <h2>Post Title
+                    <img class="img-responsive img-border img-full" src="https://static1.squarespace.com/static/55a506a8e4b025e7c4de7ed3/t/561d30aae4b059979c67b663/1444753579763/pep-pizza.jpg" alt="">
+                    <h2>Pizza Ways
                         <br>
                         <small>October 13, 2013</small>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>
+                     Cut and eat with a knife and fork. This is probably the most polite way in eating a pizza. ...
+                     Fold the slice in half. ...
+                     Remove all toppings and eat it bare. ...
+                     Eat the slice with no folding. ...
+                     Eat the crust first. ...
+                     Savor the crust for dipping. ...
+                     Stuff your own crust.</p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="img/slide-2.jpg" alt="">
-                    <h2>Post Title
+                    <img class="img-responsive img-border img-full" src="https://static1.squarespace.com/static/55a506a8e4b025e7c4de7ed3/t/561d30aae4b059979c67b663/1444753579763/pep-pizza.jpg" alt="">
+                    <h2>Pizza Made
                         <br>
                         <small>October 13, 2013</small>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>    1 1/2 cup of warm water,
+    1 package (2 1/4 teaspoons) of active dry yeast,
+    3 1/2 to 4 cups of flour (bread or all-purpose),
+    2 tablespoons of olive oil,
+    3 cups of homemade pizza sauce,
+    Favorite pizza toppings,
+    4 cups of grated mozzarella cheese,
+    Cornmeal.</p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="img/slide-3.jpg" alt="">
-                    <h2>Post Title
+                    <img class="img-responsive img-border img-full" src="https://static1.squarespace.com/static/55a506a8e4b025e7c4de7ed3/t/561d30aae4b059979c67b663/1444753579763/pep-pizza.jpg" alt="">
+                    <h2>Pizza Sauce
                         <br>
                         <small>October 13, 2013</small>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>    Combine tomato paste, garlic, parsley flakes, onion, oregano, basil and water in 2 quart saucepan.
+    Cook over medium high heat until mixture boils.
+    Reduce heat to low and simmer 10 minutes.
+    Cool a little and spread on your pizza crust and proceed with remainder of your toppings.</p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
