--- a/blog.html
+++ b/blog.html
@@ -83,7 +83,7 @@
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="https://static1.squarespace.com/static/55a506a8e4b025e7c4de7ed3/t/561d30aae4b059979c67b663/1444753579763/pep-pizza.jpg" alt="">
+                    <img class="img-responsive img-border img-full" src="http://a57.foxnews.com/global.fncstatic.com/static/managed/img/U.S./0/0/pizza_istock_woman.jpg" alt="">
                     <h2>Pizza Ways
                         <br>
                         <small>October 13, 2013</small>
@@ -100,7 +100,7 @@
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="https://static1.squarespace.com/static/55a506a8e4b025e7c4de7ed3/t/561d30aae4b059979c67b663/1444753579763/pep-pizza.jpg" alt="">
+                    <img class="img-responsive img-border img-full" src="http://www.seriouseats.com/recipes/assets_c/2010/10/20101007-pizza-lab-sauce-thumb-625xauto-115414.jpg" alt="">
                     <h2>Pizza Made
                         <br>
                         <small>October 13, 2013</small>
@@ -117,7 +117,7 @@
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="http://a57.foxnews.com/global.fncstatic.com/static/managed/img/U.S./0/0/pizza_istock_woman.jpg">         <h2>Pizza Sauce
+                    <img class="img-responsive img-border img-full" src="https://static1.squarespace.com/static/55a506a8e4b025e7c4de7ed3/t/561d30aae4b059979c67b663/1444753579763/pep-pizza.jpg">         <h2>Pizza Sauce
                         <br>
                         <small>October 13, 2013</small>
                     </h2>
